[package]
name = "wrinkle"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = "1.8.0"
directories = "6.0.0"
env_logger = "0.11.8"
figment = { version = "0.10.19", features = ["toml"] }
futures = "0.3.31"
futures-channel = "0.3.31"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "0.8.23"
widestring = "1.2.1"
windows = { version = "0.62.2", features = ["Win32_Graphics_Gdi", "Win32_Graphics_GdiPlus", "Win32_System_LibraryLoader", "Win32_UI_Input", "Win32_UI_WindowsAndMessaging"] }

[dependencies.iced]
version = "0.14.0"
default-features = false
features =  ["tiny-skia", "crisp", "thread-pool", "smol"]

[profile.release]
opt-level = "z"
strip = true
lto = "thin"
codegen-units = 1
panic = "abort"

